--- a/styling.css
+++ b/styling.css
@@ -10,6 +10,8 @@ img {
     background-color: black;
     margin: 0 auto;
     height: 85px;
+    position: sticky;
+        top: 0;
 }
 
 #centerNavBar {
